<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/bg_chinh"

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout

        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:background="@color/colorWhite"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/rl_thoat">
        <ImageView
            android:layout_marginLeft="10dp"
            android:id="@+id/close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_round_close_24"
           />
        <TextView

            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mã Thành Viên"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cam">
        <ImageView
            android:id="@+id/mavach"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/mavach"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="3dp">

        </ImageView>

    </RelativeLayout>
    <TextView

        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/mavach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thanhtoan"/>
    <TextView

        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/mavach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Coupon của bạn(2)"/>

        <LinearLayout
            android:gravity="center"
            android:background="@drawable/vienlayout"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:src="@drawable/uudai"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:textStyle="normal"
                android:padding="5dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uudai1"/>

        </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:background="@drawable/vienlayout"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:src="@drawable/uudai1"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:textStyle="normal"
            android:padding="5dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uudai2"/>


    </LinearLayout>
</LinearLayout>